<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/title_login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/logo2"/>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:ems="11"
            android:lines="2"
            android:text="@string/welcome_login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:ems="13"
            android:lines="2"
            android:fontFamily="@font/amarante"
            android:text="@string/sub_title_login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/ll_sing_up"
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/no_account_login"
                android:fontFamily="@font/amarante"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sing_up_login"
                android:fontFamily="@font/amarante"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/yes_account_login"
                android:fontFamily="@font/amarante"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_login"
                android:fontFamily="@font/amarante"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>