<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_my_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/welcome_my_reservation"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_my_reservations"
                android:layout_width="@dimen/margin_70"
                android:layout_height="@dimen/margin_50"
                android:layout_marginBottom="@dimen/margin_10"
                android:src="@drawable/store"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:text="@string/my_reservation"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/my_reservation_actives"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_column="6">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:text="@string/car"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:text="@string/days"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:text="@string/sub_total"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_total"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/margin_170"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:backgroundTint="@color/orange"
                android:layout_marginEnd="@dimen/margin_10"
                android:padding="@dimen/margin_5"
                android:layout_gravity="center"
                android:text="@string/continue_renting"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="@dimen/margin_170"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:backgroundTint="@color/yelow"
                android:layout_marginStart="@dimen/margin_10"
                android:padding="@dimen/margin_5"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>