<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_my_rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/welcome_my_rentals"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_my_reservations"
                android:layout_width="@dimen/margin_70"
                android:layout_height="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginBottom="@dimen/margin_10"
                android:src="@drawable/car"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/my_rentals"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_80"
            android:text="@string/my_rentals_actives"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/my_car"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:layout_marginStart="@dimen/margin_5"
                android:text="@string/data"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_130"
                android:layout_weight="1"
                android:background="@drawable/image_car"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:layout_marginStart="@dimen/margin_5"
                    android:text=""
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <Button
                    android:id="@+id/btn_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_gravity="bottom|left"
                    android:text="@string/unsubscribe"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>