<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/title_main"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/logo2"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/welcome_main"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_my_rentals"
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:src="@drawable/car"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:text="@string/my_rentals_main"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_my_reservations"
                    android:layout_width="@dimen/margin_70"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:src="@drawable/store"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:text="@string/my_reservations_main"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@font/amarante"
            android:text="@string/what_like_main"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>


        <LinearLayout
            android:id="@+id/ll_sing_up"
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_15"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_5">

            <TextView
                android:id="@+id/et_user"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_weight="3"
                android:background="@drawable/button"
                android:enabled="false"
                android:gravity="center"
                android:fontFamily="@font/amarante"
                android:singleLine="true"
                android:text="@string/rent_car_main"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <ImageView
                android:id="@+id/iv_a_car"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_weight="1"
                android:src="@drawable/next"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_15"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_5">

            <TextView
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_weight="3"
                android:background="@drawable/button"
                android:enabled="false"
                android:gravity="center"
                android:fontFamily="@font/amarante"
                android:singleLine="true"
                android:text="@string/rent_your_car_main"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <ImageView
                android:id="@+id/iv_my_car"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_40"
                android:layout_weight="1"
                android:src="@drawable/next"/>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>