<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:text="@string/title_init_login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/logo2"/>

        <LinearLayout
            android:id="@+id/ll_sing_up"
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/email_init_login"
                android:text=""
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/margin_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:hint="@string/password_init_login"
                android:text=""
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_init_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/darker_gray"
            android:padding="@dimen/margin_5"
            android:layout_gravity="center"
            android:text="@string/login_init_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>